# easyPlay

./: .gitignore  .gitmodules  LICENSE  README.md
cad/: Box.SLDPRT  DeviceAssembly.SLDASM  Knob cap.SLDPRT  Lid.SLDPRT
cad/stl/: Box.STL  Lid.STL
enclosure/: .gitignore  DeviceAssembly.SLDASM  Knob cap.SLDPRT
enclosure/products/: Keycap.SLDPRT  Standoff.SLDPRT
enclosure/stl/: Knob cap.STL
hardware/: .gitignore  EasyPlay.PrjPcb  EasyPlay.PrjPcbStructure  PCB.PcbDoc
hardware/Outputs/: .gitignore  OUTPUT-JOB.OutJob
hardware/Outputs/BOM/: BOM.xlsx
hardware/Schematics/: CONTROL-SWITCHES.SchDoc  CONTROLS.SchDoc  MCU.SchDoc  OVERVIEW.SchDoc  POWER.SchDoc  USB-PORT.SchDoc
software/: .gitignore
software/client/: .clang-format  CMakeLists.txt
software/client/include/: browserHandler.h  deviceHandler.h  logger.h
software/client/src/: browserHandler.cpp  deviceHandler.cpp  logger.cpp  main.cpp
software/client/tests/: browserHandlerTest.cpp
software/driver/: .gitignore  pom.xml
software/driver/src/main/resources/: logback.xml
software/extension/: .gitignore  manifest.json  package.json  tsconfig.json  webpack.config.js
software/extension/scripts/: rmInnerHtmlCode.js  rmInnerHtmlStuff.ps1
software/extension/src/assets/adobe-illustrator/: keycaps.ai
software/extension/src/sass/reactComponents/: bookmarksMenu.scss  cheatSheet.scss  global.scss  notificationPopup.scss
software/extension/src/typescript/backgroundScripts/: background.ts  contentScriptHandler.ts  deviceCommunicator.ts
software/extension/src/typescript/contentScripts/: content.ts  deviceButton.ts  keycapIcons.ts  videoHandler.ts  videoSpeed.ts
software/extension/src/typescript/utilities/: circularQueue.ts  (+1 more)
software/extension/web-ext-artifacts/: ee062cbc7bff4c85a368-1.0.3.2.xpi  ee062cbc7bff4c85a368-1.0.4.xpi  ee062cbc7bff4c85a368-1.0.5.xpi  ee062cbc7bff4c85a368-1.0.6.xpi  ee062cbc7bff4c85a368-1.0.7.xpi
software/installer/: .gitignore  CMakeLists.txt  EasyPlayInstaller.pro  _clang-format
software/installer/artifacts/: easyplay-native-app-manifest.json
software/installer/forms/: mainwindow.ui  welcomescreen.ui
software/installer/include/: clientHandler.h  firefoxHandler.h  logger.h
software/installer/include/ui/: installationPage.h  introPage.h  setupWizard.h
software/installer/resources/: resources.qrc
software/installer/scripts/: copy-installer.sh
software/installer/src/: artifactshandler.cpp  artifactshandler.h  clientHandler.cpp  copyhandler.cpp  copyhandler.h  firefoxHandler.cpp  firefoxhandler.cpp  firefoxhandler.h  javahandler.cpp  javahandler.h  main.cpp  mainwindow.cpp  mainwindow.h
software/installer/src/ui/: introPage.cpp
software/installer/src/utils/: logger.cpp  logger.h
software/installer/src/wizard/: copypage.cpp  copypage.h  endpage.cpp  endpage.h  installationdestpage.cpp  installationdestpage.h  intropage.cpp  intropage.h  setupwizard.cpp  setupwizard.h
software/installer/tests/: firefoxHandlerTest.cpp
software/mcu/: .cproject  .gitignore  .mxproject  .project  EasyPlay Debug.launch  EasyPlay Release.launch  EasyPlay.ioc  README.md  STM32F042C6TX_FLASH.ld  mx.scratch
software/mcu/Core/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
software/mcu/Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
software/mcu/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
software/new-installer/: CMakeLists.txt
software/new-installer/include/: clientHandler.h  firefoxHandler.h  manifestHandler.h
software/new-installer/include/ui/: filesCreationPage.h  installationPage.h  introPage.h  setupWizard.h
software/new-installer/resources/: easyPlay-client  resources.qrc
software/new-installer/src/: clientHandler.cpp  firefoxHandler.cpp  logger.cpp  main.cpp  manifestHandler.cpp
software/new-installer/src/ui/: filesCreationPage.cpp  installationPage.cpp  introPage.cpp  setupWizard.cpp
software/new-installer/tests/: clientHandlerTest.cpp  firefoxHandlerTest.cpp  manifestHandlerTest.cpp
(+37 files in other folders)
